@@ -14,8 +14,10 @@ import net.neoforged.fml.common.EventBusSubscriber;
 import net.neoforged.neoforge.client.extensions.common.IClientItemExtensions;
 import net.neoforged.neoforge.client.extensions.common.RegisterClientExtensionsEvent;
 import org.jetbrains.annotations.NotNull;
-import xox.labvorty.weaversparadise.data.*;
-import xox.labvorty.weaversparadise.model.Modelastolfo_armor;
+import xox.labvorty.weaversparadise.model.AstolfoArmorModel;
+import xox.labvorty.weaversparadise.model.BridgetClothingModel;
+import xox.labvorty.weaversparadise.model.FelixClothingModel;
+import xox.labvorty.weaversparadise.renderers.bewlr.*;
 
 import java.util.Collections;
 import java.util.Map;
@@ -28,7 +30,7 @@ public class WeaversParadiseClientItemExtensions {
             @Override
             public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
                 HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-                        Map.of("head", new Modelastolfo_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelastolfo_armor.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
+                        Map.of("head", new AstolfoArmorModel(Minecraft.getInstance().getEntityModels().bakeLayer(AstolfoArmorModel.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
                                 new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
                                 "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
                 armorModel.crouching = living.isShiftKeyDown();
@@ -42,9 +44,9 @@ public class WeaversParadiseClientItemExtensions {
             @Override
             @OnlyIn(Dist.CLIENT)
             public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-                HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelastolfo_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelastolfo_armor.LAYER_LOCATION)).Body, "left_arm",
-                        new Modelastolfo_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelastolfo_armor.LAYER_LOCATION)).LeftArm, "right_arm",
-                        new Modelastolfo_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelastolfo_armor.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+                HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new AstolfoArmorModel(Minecraft.getInstance().getEntityModels().bakeLayer(AstolfoArmorModel.LAYER_LOCATION)).Body, "left_arm",
+                        new AstolfoArmorModel(Minecraft.getInstance().getEntityModels().bakeLayer(AstolfoArmorModel.LAYER_LOCATION)).LeftArm, "right_arm",
+                        new AstolfoArmorModel(Minecraft.getInstance().getEntityModels().bakeLayer(AstolfoArmorModel.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
                         new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
                 armorModel.crouching = living.isShiftKeyDown();
                 armorModel.riding = defaultModel.riding;
@@ -58,8 +60,8 @@ public class WeaversParadiseClientItemExtensions {
             @OnlyIn(Dist.CLIENT)
             public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
                 HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-                        Map.of("left_leg", new Modelastolfo_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelastolfo_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
-                                new Modelastolfo_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelastolfo_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+                        Map.of("left_leg", new AstolfoArmorModel(Minecraft.getInstance().getEntityModels().bakeLayer(AstolfoArmorModel.LAYER_LOCATION)).LeftLeg, "right_leg",
+                                new AstolfoArmorModel(Minecraft.getInstance().getEntityModels().bakeLayer(AstolfoArmorModel.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
                                 new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
                                 "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
                 armorModel.crouching = living.isShiftKeyDown();
@@ -74,8 +76,8 @@ public class WeaversParadiseClientItemExtensions {
             @OnlyIn(Dist.CLIENT)
             public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
                 HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-                        Map.of("left_leg", new Modelastolfo_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelastolfo_armor.LAYER_LOCATION)).LeftBoot, "right_leg",
-                                new Modelastolfo_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelastolfo_armor.LAYER_LOCATION)).RightBoot, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+                        Map.of("left_leg", new AstolfoArmorModel(Minecraft.getInstance().getEntityModels().bakeLayer(AstolfoArmorModel.LAYER_LOCATION)).LeftBoot, "right_leg",
+                                new AstolfoArmorModel(Minecraft.getInstance().getEntityModels().bakeLayer(AstolfoArmorModel.LAYER_LOCATION)).RightBoot, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
                                 new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
                                 "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
                 armorModel.crouching = living.isShiftKeyDown();
@@ -84,6 +86,128 @@ public class WeaversParadiseClientItemExtensions {
                 return armorModel;
             }
         }, WeaversParadiseItems.ASTOLFO_ARMOR_BOOTS.get());
+
+        event.registerItem(new IClientItemExtensions() {
+            @Override
+            public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+                HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+                        Map.of("head", new BridgetClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(BridgetClothingModel.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
+                                new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                                "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                armorModel.crouching = living.isShiftKeyDown();
+                armorModel.riding = defaultModel.riding;
+                armorModel.young = living.isBaby();
+                return armorModel;
+            }
+        }, WeaversParadiseItems.BRIDGET_ARMOR_HAT.get());
+
+        event.registerItem(new IClientItemExtensions() {
+            @Override
+            @OnlyIn(Dist.CLIENT)
+            public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+                HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new BridgetClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(BridgetClothingModel.LAYER_LOCATION)).Body, "left_arm",
+                        new BridgetClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(BridgetClothingModel.LAYER_LOCATION)).LeftArm, "right_arm",
+                        new BridgetClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(BridgetClothingModel.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+                        new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                armorModel.crouching = living.isShiftKeyDown();
+                armorModel.riding = defaultModel.riding;
+                armorModel.young = living.isBaby();
+                return armorModel;
+            }
+        }, WeaversParadiseItems.BRIDGET_ARMOR_JACKET.get());
+
+        event.registerItem(new IClientItemExtensions() {
+            @Override
+            @OnlyIn(Dist.CLIENT)
+            public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+                HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+                        Map.of("left_leg", new BridgetClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(BridgetClothingModel.LAYER_LOCATION)).LeftLegPants, "right_leg",
+                                new BridgetClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(BridgetClothingModel.LAYER_LOCATION)).RightLegPants, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+                                new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                                "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                armorModel.crouching = living.isShiftKeyDown();
+                armorModel.riding = defaultModel.riding;
+                armorModel.young = living.isBaby();
+                return armorModel;
+            }
+        }, WeaversParadiseItems.BRIDGET_ARMOR_SKIRT.get());
+
+        event.registerItem(new IClientItemExtensions() {
+            @Override
+            @OnlyIn(Dist.CLIENT)
+            public HumanoidModel<?> getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+                HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+                        Map.of("left_leg", new BridgetClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(BridgetClothingModel.LAYER_LOCATION)).LeftLeg, "right_leg",
+                                new BridgetClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(BridgetClothingModel.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+                                new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                                "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                armorModel.crouching = living.isShiftKeyDown();
+                armorModel.riding = defaultModel.riding;
+                armorModel.young = living.isBaby();
+                return armorModel;
+            }
+        }, WeaversParadiseItems.BRIDGET_ARMOR_BOOTS.get());
+
+        event.registerItem(new IClientItemExtensions() {
+            @Override
+            public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+                HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+                        Map.of("head", new FelixClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(FelixClothingModel.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
+                                new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                                "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                armorModel.crouching = living.isShiftKeyDown();
+                armorModel.riding = defaultModel.riding;
+                armorModel.young = living.isBaby();
+                return armorModel;
+            }
+        }, WeaversParadiseItems.FELIX_ARMOR_HAT.get());
+
+        event.registerItem(new IClientItemExtensions() {
+            @Override
+            @OnlyIn(Dist.CLIENT)
+            public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+                HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new FelixClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(FelixClothingModel.LAYER_LOCATION)).Body, "left_arm",
+                        new FelixClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(FelixClothingModel.LAYER_LOCATION)).Left_Arm, "right_arm",
+                        new FelixClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(FelixClothingModel.LAYER_LOCATION)).Right_Arm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+                        new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                armorModel.crouching = living.isShiftKeyDown();
+                armorModel.riding = defaultModel.riding;
+                armorModel.young = living.isBaby();
+                return armorModel;
+            }
+        }, WeaversParadiseItems.FELIX_ARMOR_JACKET.get());
+
+        event.registerItem(new IClientItemExtensions() {
+            @Override
+            @OnlyIn(Dist.CLIENT)
+            public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+                HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+                        Map.of("left_leg", new FelixClothingModel<>(Minecraft.getInstance().getEntityModels().bakeLayer(FelixClothingModel.LAYER_LOCATION)).Left_Leg, "right_leg",
+                                new FelixClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(FelixClothingModel.LAYER_LOCATION)).Right_Leg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+                                new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                                "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                armorModel.crouching = living.isShiftKeyDown();
+                armorModel.riding = defaultModel.riding;
+                armorModel.young = living.isBaby();
+                return armorModel;
+            }
+        }, WeaversParadiseItems.FELIX_ARMOR_SKIRT.get());
+
+        event.registerItem(new IClientItemExtensions() {
+            @Override
+            @OnlyIn(Dist.CLIENT)
+            public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+                HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+                        Map.of("left_leg", new FelixClothingModel(Minecraft.getInstance().getEntityModels().bakeLayer(FelixClothingModel.LAYER_LOCATION)).Left_Leg2, "right_leg",
+                                new FelixClothingModel<>(Minecraft.getInstance().getEntityModels().bakeLayer(FelixClothingModel.LAYER_LOCATION)).Right_Leg2, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+                                new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                                "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                armorModel.crouching = living.isShiftKeyDown();
+                armorModel.riding = defaultModel.riding;
+                armorModel.young = living.isBaby();
+                return armorModel;
+            }
+        }, WeaversParadiseItems.FELIX_ARMOR_BOOTS.get());
 
         event.registerItem(
                 new IClientItemExtensions() {
@@ -212,6 +336,20 @@ public class WeaversParadiseClientItemExtensions {
                 WeaversParadiseItems.PANTS_JEANS,
                 WeaversParadiseItems.PANTS_COTTON,
                 WeaversParadiseItems.PANTS_SILK
+        );
+
+        event.registerItem(
+                new IClientItemExtensions() {
+                    @Override
+                    public BlockEntityWithoutLevelRenderer getCustomRenderer() {
+                        return new CapeRenderer(Minecraft.getInstance().getBlockEntityRenderDispatcher(),
+                                Minecraft.getInstance().getEntityModels()
+                        );
+                    }
+                },
+                WeaversParadiseItems.COTTON_CAPE,
+                WeaversParadiseItems.SILK_CAPE,
+                WeaversParadiseItems.WOOL_CAPE
         );
     }
 }
